--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: <p align="center"> Rohit R Srivastava </p>
-logo: /assets/img/logo.png
+logo: /assets/img/logo1.png
 description: Minimal is a theme for GitHub Pages.
 show_downloads: true
 google_analytics:
